# JobTracker-CPP

./: .gitignore  CMakeLists.txt  Dockerfile.cpp-dev-env  Dockerfile.cpp-prod  Dockerfile.cpp-prod.dockerignore  Dockerfile.cppDevEnv  Dockerfile.spacy-ner  Dockerfile.spacy-ner.dockerignore  Makefile  README.md  compose.yaml  init.sql  setup.sh
include/app/: JobTracker.hpp
include/cli/: CommandLineParser.hpp
include/data/: JobApplication.hpp
include/db/: PostgresDatabaseManager.hpp
include/llm/: FastAPIClient.hpp  OllamaAPIClient.hpp
include/utils/: EnvironmentConfig.hpp
src/: main.cpp
src/cli/: CommandLineParser.cpp
src/cpp/: main.cpp
src/cpp/app/: JobTracker.cpp
src/cpp/data/: JobApplication.cpp
src/cpp/db/: PostgresDatabaseManager.cpp
src/cpp/llm/: FastAPIClient.cpp
src/cpp/utils/: EnviromentConfig.cpp
src/python/: main.py  nlp_utils.py
tests/: CMakeLists.txt  test_CommandLineParser.cpp
tests/cpp/: CMakeLists.txt  pasteJobDescription_test.cpp
